--- a/resume.tex
+++ b/resume.tex
@@ -12,20 +12,57 @@
 \setlength{\tabcolsep}{0in}
 \begin{document}
 
-\begin{tabular*}{6.5in}{l@{\extracolsep{\fill}}r}
-\textbf{Ryan J Voots}  & \\
-101 Columbus Court  & 678-363-6602 \\
-Dallas, GA 30132 & simcop2387@yahoo.com \\
-\end{tabular*}
-\\
+\textbf{Ryan J Voots}
+678-551-2387
+ryan@voots.org
+
 \vspace{0.1in}
+
+{\large \textbf{Open Source Projects}}
+	\begin{itemize}
+	\item
+		\begin{description}
+		\item[Project:] Farnsworth 
+		\item[Role:] Creator, Lead Designer, and Lead Developer 
+		\item[Description:] Farnsworth is a dynamically typed functional and imperative programming language.  It is being designed for applied mathematics and physics.  Currently has a working implementation consisting of about 26,000 lines of code, including a testing suite for the parts of the language that are finalized.
+		\end{description}
+
+        \item
+                \begin{description}
+                \item[Project:] Kona
+                \item[Role:] Web Designer
+                \item[Description:] Kona is a simple Wiki application created using modern technologies in Perl and XHTML with CSS3 for a modern layout with MultiMarkup for creating documents.
+		\end{description}
+
+        \item
+                \begin{description}  
+                \item[Project:] AutoSub
+                \item[Role:] Creator, Lead Programmer
+                \item[Description:] A project to aide in the creation of closed captions by identifing portions of video that contain human speech using various types of signal analysis.
+                \end{description}
+
+	\item
+                \begin{description}
+                \item[Project:] TITLE
+                \item[Role:] ROLE
+                \item[Description:] DESCRIPTION
+		\end{description}
+
+	\end{itemize}
+
 {\large \textbf{Education}}
 
 	\begin{itemize}
 	\item 
 	\begin{tabular*}{6in}{l@{\extracolsep{\fill}}r}
+		\textbf{Kennesaw State University} & Belmont, NC \\
+		Major in Computer and Information Science, 2003 - 2007 \\
+	\end{tabular*}
+
+	\item 
+	\begin{tabular*}{6in}{l@{\extracolsep{\fill}}r}
 		\textbf{Belmont Abbey College} & Belmont, NC \\
-		Major in Computer and Information Science, 2003 - Present \\
+		Major in Computer and Information Science, 2003 - 2007 \\
 	\end{tabular*}
 
 	\item
@@ -52,15 +89,41 @@ Dallas, GA 30132 & simcop2387@yahoo.com \\
 		\item Assisted customers in a polite manner \\
 		\item Kept the stock room organized \\
 	\end{itemize}
+
+\item
+	\begin{tabular*}{6in}{l@{\extracolsep{\fill}}r}
+		\textbf{Cashier/Stock/Part Installation} & June 2007 - December 2007 \\
+		Autozone & Dallas, NC \\
+	\end{tabular*}
+
+	\begin{itemize}
+		\item Operated the cash register at the front of the store \\
+		\item Kept the stock room organized \\
+		\item Installed various parts \\
+	\end{itemize}
+
+\item
+	\begin{tabular*}{6in}{l@{\extracolsep{\fill}}r}
+		\textbf{Cashier/Stock} & February 2002 - December 2002 \\
+		                       & May 2003 - July 2003 \\
+				       & December 2003 - January 2004 \\
+		CVS Pharmacy & Hickory, NC \\
+	\end{tabular*}
+
+	\begin{itemize}
+		\item Operated the cash register at the front of the store \\
+		\item Assisted customers in a polite manner \\
+		\item Kept the stock room organized \\
+	\end{itemize}
 \end{itemize}
 
 \begin{description}
 \item[Programming Languages:]
-C, C++, Perl, Bourne shell scripting, BASH shell scripting, SQL, HTML, XML, CSS, XHTML, \LaTeX, Java
+Perl, C/C++, C\#, PHP, Bourne shell scripting, BASH shell scripting, SQL, HTML, XML, CSS, XHTML, \LaTeX, Java
 \item[Operating Systems:]
-Linux, Windows 95/98/NT/2000/XP
+Linux, Windows 95/98/NT/2000/XP, some Solaris and BSD
 \item[Applications:]
-PostgreSQL, Apache, CVS, Subversion, XFree86/Xorg, MySQL, GTK, Microsoft Office, Open Office.org
+PostgreSQL, Apache, Lighttpd, CVS, Subversion, XFree86/Xorg, MySQL, GTK, Microsoft Office, Open Office.org
 \item[Miscellaneous:]
 TCP/IP networking, strong verbal and written communication skills, excellent troubleshooting and debugging skills
 \end{description}
