--- a/resume.tex
+++ b/resume.tex
@@ -3,13 +3,7 @@
 % (c) 2007 Ryan Voots <simcop2387@yahoo.com>
 % $Id: resume.tex,v 1.7 2007/05/19 22:36:29 ryan Exp $
 %
-\documentclass[11pt]{article}
-\usepackage{fullpage}
-\textheight=9.0in
-\pagestyle{empty}
-\raggedbottom
-\raggedright
-\setlength{\tabcolsep}{0in}
+\documentclass{resume}
 \begin{document}
 
 \textbf{Ryan J Voots}
