--- a/resume.tex
+++ b/resume.tex
@@ -4,121 +4,123 @@
 % $Id: resume.tex,v 1.7 2007/05/19 22:36:29 ryan Exp $
 %
 \documentclass{resume}
+% my info
+\author{Ryan Voots}
+\phone{678-551-2387}
+\email{ryan@voots.org}
+\webpage{http://www.simcop2387.info}
+\streetaddress{101 Columbus Ct}
+\citystatezip{Dallas GA, 30132}
+
+% For more compact lists.
+\usepackage{paralist}
+
+% for urls
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks,%
+    citecolor=black,%
+    filecolor=black,%
+    linkcolor=black,%
+    urlcolor=blue
+}
+
+% Multi-colored rules! (John Q is desperate)
+\definecolor{ruleendcolor}{rgb}{0.2, 0.2, 0.6}
+
 \begin{document}
 
-\textbf{Ryan J Voots}
-678-551-2387
-ryan@voots.org
-
+\maketitle
 \vspace{0.1in}
 
-{\large \textbf{Open Source Projects}}
-	\begin{itemize}
-	\item
-		\begin{description}
-		\item[Project:] Farnsworth 
-		\item[Role:] Creator, Lead Designer, and Lead Developer 
-		\item[Description:] Farnsworth is a dynamically typed functional and imperative programming language.  It is being designed for applied mathematics and physics.  Currently has a working implementation consisting of about 26,000 lines of code, including a testing suite for the parts of the language that are finalized.
-		\end{description}
-
-        \item
-                \begin{description}
-                \item[Project:] Kona
-                \item[Role:] Web Designer
-                \item[Description:] Kona is a simple Wiki application created using modern technologies in Perl and XHTML with CSS3 for a modern layout with MultiMarkup for creating documents.
-		\end{description}
-
-        \item
-                \begin{description}  
-                \item[Project:] AutoSub
-                \item[Role:] Creator, Lead Programmer
-                \item[Description:] A project to aide in the creation of closed captions by identifing portions of video that contain human speech using various types of signal analysis.
-                \end{description}
-
-	\item
-                \begin{description}
-                \item[Project:] TITLE
-                \item[Role:] ROLE
-                \item[Description:] DESCRIPTION
-		\end{description}
-
-	\end{itemize}
-
-{\large \textbf{Education}}
-
-	\begin{itemize}
-	\item 
-	\begin{tabular*}{6in}{l@{\extracolsep{\fill}}r}
-		\textbf{Kennesaw State University} & Belmont, NC \\
-		Major in Computer and Information Science, 2003 - 2007 \\
-	\end{tabular*}
-
-	\item 
-	\begin{tabular*}{6in}{l@{\extracolsep{\fill}}r}
-		\textbf{Belmont Abbey College} & Belmont, NC \\
-		Major in Computer and Information Science, 2003 - 2007 \\
-	\end{tabular*}
-
-	\item
-	\begin{tabular*}{6in}{l@{\extracolsep{\fill}}r}
-		\textbf{Fred T. Foard Highschool} 2003 & Newton, NC \\
-	\end{tabular*}
-
-	\end{itemize}
-
-{\large \textbf{Work History}}
-
-\begin{itemize}
-
-\item
-	\begin{tabular*}{6in}{l@{\extracolsep{\fill}}r}
-		\textbf{Cashier/Stock} & February 2002 - December 2002 \\
-		                       & May 2003 - July 2003 \\
-				       & December 2003 - January 2004 \\
-		CVS Pharmacy & Hickory, NC \\
-	\end{tabular*}
-
-	\begin{itemize}
-		\item Operated the cash register at the front of the store \\
-		\item Assisted customers in a polite manner \\
-		\item Kept the stock room organized \\
-	\end{itemize}
-
-\item
-	\begin{tabular*}{6in}{l@{\extracolsep{\fill}}r}
-		\textbf{Cashier/Stock/Part Installation} & June 2007 - December 2007 \\
-		Autozone & Dallas, NC \\
-	\end{tabular*}
-
-	\begin{itemize}
-		\item Operated the cash register at the front of the store \\
-		\item Kept the stock room organized \\
-		\item Installed various parts \\
-	\end{itemize}
-
-\item
-	\begin{tabular*}{6in}{l@{\extracolsep{\fill}}r}
-		\textbf{Cashier/Stock} & February 2002 - December 2002 \\
-		                       & May 2003 - July 2003 \\
-				       & December 2003 - January 2004 \\
-		CVS Pharmacy & Hickory, NC \\
-	\end{tabular*}
-
-	\begin{itemize}
-		\item Operated the cash register at the front of the store \\
-		\item Assisted customers in a polite manner \\
-		\item Kept the stock room organized \\
-	\end{itemize}
-\end{itemize}
-
+\section{Skills}
 \begin{description}
 \item[Programming Languages:]
-Perl, C/C++, C\#, PHP, Bourne shell scripting, BASH shell scripting, SQL, HTML, XML, CSS, XHTML, \LaTeX, Java
+Perl, C/C++, C\#, Javascript, Java, SQL, HTML, XML, CSS, XHTML, Bourne shell scripting, BASH shell scripting, \LaTeX, PHP
 \item[Operating Systems:]
 Linux, Windows 95/98/NT/2000/XP, some Solaris and BSD
-\item[Applications:]
-PostgreSQL, Apache, Lighttpd, CVS, Subversion, XFree86/Xorg, MySQL, GTK, Microsoft Office, Open Office.org
+\item[Applications and Libraries:]
+PostgreSQL, Apache, Lighttpd, Git, CVS, Subversion, XFree86/Xorg, MySQL, GTK, QT, Microsoft Office, Open Office.org
 \item[Miscellaneous:]
-TCP/IP networking, strong verbal and written communication skills, excellent troubleshooting and debugging skills
+IPv4 and IPv6 networking, strong verbal and written communication skills, excellent troubleshooting and debugging skills
 \end{description}
+
+\section{Experience}
+
+\subsection{Open Source Work}
+
+\affiliation[Creator, Lead Designer, and Lead Developer]{Farnsworth Programming Language}{2008-}
+
+\begin{compactitem}
+\item Farnsworth is a dynamically typed functional and imperative programming language.  
+It is being designed for applied mathematics and physics.  Currently has a working implementation 
+consisting of 26,000 lines of code, including a testing suite for the parts of the language that are finalized.
+\item More Information: \url{http://www.simcop2387.info/}
+\end{compactitem}
+
+\affiliation[Web Designer, Javascript Programmer]{Kona}{2010}
+
+\begin{compactitem}
+\item Kona is a simple Wiki application created using modern technologies in Perl and XHTML 
+with CSS3 for a modern layout with MultiMarkup for creating documents.
+\item More Information: \url{http://github.com/symkat/Kona}
+\end{compactitem}
+
+\affiliation[Creator, Lead Programmer]{AutoSub}{2009-}
+
+\begin{compactitem}
+\item A project to aide in the creation of closed captions by identifing portions of 
+video that contain human speech using various types of signal analysis.
+\item More Information: \url{https://github.com/simcop2387/autosub}
+\end{compactitem}
+
+\affiliation[Bug tester, Programmer]{Freedroid RPG}{2003-2004}
+
+\begin{compactitem}
+\item Found and fixed various buffer overflows and other bugs
+\item Did some optimization on the original OpenGL code in the project
+\end{compactitem}
+
+\subsection{Work History}
+
+\affiliation[Web Designer, Javascript Programmer]{Personal Project}{2010}
+\begin{compactitem}
+\item Created several designs for \url{http://www.notanewyorker.com/} and related sites.
+\end{compactitem}
+
+\affiliation[Programmer]{Cyphrus Federation of Underwater Activities}{2010}
+
+\begin{compactitem}
+\item Created interactive dive tables to plan no decompression diving.
+\item More Information: \url{http://www.oceanssearch.com/}
+\end{compactitem}
+
+\affiliation[Transcriber]{vWorker.com}{2010}
+
+\begin{compactitem}
+\item Transcribed audio lectures into formatted text.
+\end{compactitem}
+
+\affiliation[Cashier/Stock/Part Installation]{Autozone}{June 2007-December 2007}
+
+\begin{compactitem}
+\item Installed minor parts into customers vehicles
+\item Operated the cash register at the front of the store
+\item Assisted customers in a polite manner
+\item Kept the stock room organized
+\end{compactitem}
+
+\affiliation[Cashier/Stock/Part Installation]{CVS Pharmacy}{February 2002 - December 2002, May 2003 - July 2003}
+
+\begin{compactitem}
+\item Operated the cash register at the front of the store
+\item Assisted customers in a polite manner
+\item Kept the stock room organized
+\end{compactitem}
+
+\section{Education}
+\affiliation{Belmont Abbey College}{2003-2007}
+\affiliation{Georgia Highlands College}{2008-2009}
+\affiliation{Kennesaw State University}{2010}
+
 \end{document}
