removing extraneous stuff

--- a/resume.tex
+++ b/resume.tex
@@ -36,11 +36,11 @@
 \section{Skills}
 \begin{description}
 \item[Programming Languages:]
-Perl, C/C++, C\#, Javascript, Java, SQL, HTML, XML, CSS, XHTML, Bourne shell scripting, BASH shell scripting, \LaTeX, PHP
+Perl, C/C++, C\#, Javascript, Java, SQL, HTML, CSS
 \item[Operating Systems:]
 Linux, Windows 95/98/NT/2000/XP, some Solaris and BSD
 \item[Applications and Libraries:]
-PostgreSQL, Apache, Lighttpd, Git, CVS, Subversion, XFree86/Xorg, MySQL, GTK, QT, Microsoft Office, Open Office.org
+PostgreSQL, MySQL, Apache, Lighttpd, Git, CVS, Subversion
 \item[Miscellaneous:]
 IPv4 and IPv6 networking, strong verbal and written communication skills, excellent troubleshooting and debugging skills
 \end{description}
@@ -95,24 +95,10 @@ video that contain human speech using various types of signal analysis.
 \item More Information: \url{http://www.oceanssearch.com/}
 \end{compactitem}
 
-\affiliation[Transcriber]{vWorker.com}{2010}
-
-\begin{compactitem}
-\item Transcribed audio lectures into formatted text.
-\end{compactitem}
-
 \affiliation[Cashier/Stock/Part Installation]{Autozone}{June 2007-December 2007}
 
 \begin{compactitem}
 \item Installed minor parts into customers vehicles
-\item Operated the cash register at the front of the store
-\item Assisted customers in a polite manner
-\item Kept the stock room organized
-\end{compactitem}
-
-\affiliation[Cashier/Stock/Part Installation]{CVS Pharmacy}{February 2002 - December 2002, May 2003 - July 2003}
-
-\begin{compactitem}
 \item Operated the cash register at the front of the store
 \item Assisted customers in a polite manner
 \item Kept the stock room organized
