removing unneeded stuff

--- a/resume.tex
+++ b/resume.tex
@@ -12,6 +12,8 @@
 \streetaddress{101 Columbus Ct}
 \citystatezip{Dallas GA, 30132}
 
+\usepackage{fullpage}
+
 % For more compact lists.
 \usepackage{paralist}
 
@@ -93,15 +95,6 @@ video that contain human speech using various types of signal analysis.
 \begin{compactitem}
 \item Created interactive dive tables to plan no decompression diving.
 \item More Information: \url{http://www.oceanssearch.com/}
-\end{compactitem}
-
-\affiliation[Cashier/Stock/Part Installation]{Autozone}{June 2007-December 2007}
-
-\begin{compactitem}
-\item Installed minor parts into customers vehicles
-\item Operated the cash register at the front of the store
-\item Assisted customers in a polite manner
-\item Kept the stock room organized
 \end{compactitem}
 
 \section{Education}
