--- a/resume.tex
+++ b/resume.tex
@@ -40,11 +40,11 @@
 \item[Programming Languages:]
 Perl, C/C++, C\#, Javascript, Java, SQL, HTML, CSS
 \item[Operating Systems:]
-Linux, Windows 95/98/NT/2000/XP, some Solaris and BSD
+Linux, Windows NT/2000/XP, some Solaris and BSD
 \item[Applications and Libraries:]
 PostgreSQL, MySQL, Apache, Lighttpd, Git, CVS, Subversion
 \item[Miscellaneous:]
-IPv4 and IPv6 networking, strong verbal and written communication skills, excellent troubleshooting and debugging skills
+IPv4 and IPv6 networking; strong verbal and written communication skills; excellent troubleshooting, problem solving, and debugging skills; very quick learner.
 \end{description}
 
 \section{Experience}
