tweaks to layout

--- a/resume.tex
+++ b/resume.tex
@@ -12,7 +12,12 @@
 \streetaddress{101 Columbus Ct}
 \citystatezip{Dallas GA, 30132}
 
-\usepackage{fullpage}
+% \usepackage{fullpage}
+	\addtolength{\oddsidemargin}{-.875in}
+	\addtolength{\evensidemargin}{-.875in}
+
+	\addtolength{\topmargin}{-.875in}
+
 
 % For more compact lists.
 \usepackage{paralist}
