changing things again

--- a/resume.tex
+++ b/resume.tex
@@ -15,9 +15,10 @@
 % \usepackage{fullpage}
 	\addtolength{\oddsidemargin}{-.875in}
 	\addtolength{\evensidemargin}{-.875in}
-
 	\addtolength{\topmargin}{-.875in}
 
+	\addtolength{\textwidth}{1.75in}
+	\addtolength{\textheight}{1.75in}
 
 % For more compact lists.
 \usepackage{paralist}
@@ -43,13 +44,13 @@
 \section{Skills}
 \begin{description}
 \item[Programming Languages:]
-Perl, C/C++, C\#, Javascript, Java, SQL, HTML, CSS
+Perl, C/C++, C\#, Javascript, Java, SQL
 \item[Operating Systems:]
 Linux, Windows NT/2000/XP, some Solaris and BSD
 \item[Applications and Libraries:]
 PostgreSQL, MySQL, Apache, Lighttpd, Git, CVS, Subversion
 \item[Miscellaneous:]
-IPv4 and IPv6 networking; strong verbal and written communication skills; excellent troubleshooting, problem solving, and debugging skills; very quick learner.
+HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication skills; excellent troubleshooting, problem solving, and debugging skills; very quick learner.
 \end{description}
 
 \section{Experience}
