added objective and some info on school

--- a/resume.tex
+++ b/resume.tex
@@ -41,6 +41,10 @@
 \maketitle
 \vspace{0.1in}
 
+\section{Objective}
+To obtain employment in an environment that utilizes my skills in programming and systems administration while challenging me to
+expand my current knowledge base.
+
 \section{Skills}
 \begin{description}
 \item[Programming Languages:]
@@ -107,5 +111,9 @@ video that contain human speech using various types of signal analysis.
 \affiliation{Belmont Abbey College}{2003-2007}
 \affiliation{Georgia Highlands College}{2008-2009}
 \affiliation{Kennesaw State University}{2010}
+
+\begin{compactitem}
+\item Studying for a degree in Computer Science.  Focusing on programming, networks, and databases.
+\end{compactitem}
 
 \end{document}
