adding php back, and a basic cover letter

--- a/resume.tex
+++ b/resume.tex
@@ -48,7 +48,7 @@ expand my current knowledge base.
 \section{Skills}
 \begin{description}
 \item[Programming Languages:]
-Perl, C/C++, C\#, Javascript, Java, SQL
+Perl, C/C++, C\#, Javascript, Java, SQL, PHP
 \item[Operating Systems:]
 Linux, Windows NT/2000/XP, some Solaris and BSD
 \item[Applications and Libraries:]
