--- a/resume.tex
+++ b/resume.tex
@@ -116,4 +116,10 @@ video that contain human speech using various types of signal analysis.
 \item Studying for a degree in Computer Science.  Focusing on programming, networks, and databases.
 \end{compactitem}
 
+\section{References}
+\begin{tabular}{l|c|r}
+Michael Parkhurst & Software Developer @ (mt) Media Temple & mparkhurst@mediatemple.net
+Peter Krumins & Software Developer/Blogger & peter@catonmat.net
+James Halliday & Software Developer & mail@substack.net
+\end{tabular}
 \end{document}
