--- a/resume.tex
+++ b/resume.tex
@@ -117,9 +117,9 @@ video that contain human speech using various types of signal analysis.
 \end{compactitem}
 
 \section{References}
-\begin{tabular}{l|c|r}
-Michael Parkhurst & Software Developer @ (mt) Media Temple & mparkhurst@mediatemple.net
-Peter Krumins & Software Developer/Blogger & peter@catonmat.net
+\begin{tabular}{l|c|l}
+Michael Parkhurst & Software Developer @ (mt) Media Temple & mparkhurst@mediatemple.net \\
+Peter Krumins & Software Developer/Blogger & peter@catonmat.net \\
 James Halliday & Software Developer & mail@substack.net
 \end{tabular}
 \end{document}
