more style changes and more info about mediasched

--- a/resume.tex
+++ b/resume.tex
@@ -99,8 +99,8 @@ with CSS3 for a modern layout with MultiMarkup for creating documents.
 \affiliation[Creator, Lead Programmer]{MediaSched}{2005-}
 
 \begin{compactitem}
-\item MediaSched is a program for 
-\item More Information: \url{http://github.com/symkat/Kona}
+\item MediaSched is a program for easily running any kind of scheduled and unscheduled media playback.  Supporting the use of existing calendar/scheduling software for the selection of simple to complex playlists.
+\item More Information: \url{http://github.com/simcop2387/MediaSched}
 \end{compactitem}
 
 \affiliation[Creator, Lead Programmer]{AutoSub}{2009-}
