--- a/resume.tex
+++ b/resume.tex
@@ -60,6 +60,7 @@
 \vspace{0.1in}
 
 \section{Objective}
+To start a career developing software that will challenge my knowledge and require me to expand my abilities...
 To obtain employment in an environment that utilizes my skills in programming and systems administration while challenging me to
 expand my current knowledge base.
 
