--- a/resume.tex
+++ b/resume.tex
@@ -100,14 +100,14 @@ with CSS3 for a modern layout with MultiMarkup for creating documents.
 \affiliation[Creator, Lead Programmer]{MediaSched}{2005-}
 
 \begin{compactitem}
-\item MediaSched is a program for easily running any kind of scheduled and unscheduled media playback.  Supporting the use of existing calendar/scheduling software for the selection of simple to complex playlists.
+\item MediaSched is a program for easily running any kind of scheduled and unscheduled media playback.  Supporting the use of existing calendar/scheduling software for the selection of simple to complex play lists.
 \item More Information: \url{http://github.com/simcop2387/MediaSched}
 \end{compactitem}
 
 \affiliation[Creator, Lead Programmer]{AutoSub}{2009-}
 
 \begin{compactitem}
-\item A project to aide in the creation of closed captions by identifing portions of 
+\item A project to aide in the creation of closed captions by identifying portions of 
 video that contain human speech using various types of signal analysis.
 \item More Information: \url{https://github.com/simcop2387/autosub}
 \end{compactitem}
@@ -126,7 +126,7 @@ video that contain human speech using various types of signal analysis.
 \item Created several designs for \url{http://www.notanewyorker.com/} and related sites.
 \end{compactitem}
 
-\affiliation[Programmer]{Cyphrus Federation of Underwater Activities}{2010}
+\affiliation[Programmer]{Cyprus Federation of Underwater Activities}{2010}
 
 \begin{compactitem}
 \item Created interactive dive tables to plan no decompression dives without the aide of an expensive dive computer.
