more spell check

--- a/resume.tex
+++ b/resume.tex
@@ -60,7 +60,7 @@
 \vspace{0.1in}
 
 \section{Objective}
-To start a career developing software that will challenge my knowledge and require me to expand my abilities...
+To start a career developing software that will challenge my knowledge and require me to expand my abilities, while allowing me to use my skills designing software and administering systems.
 To obtain employment in an environment that utilizes my skills in programming and systems administration while challenging me to
 expand my current knowledge base.
 
