working on master

--- a/masterresume.tex
+++ b/masterresume.tex
@@ -116,11 +116,23 @@ with CSS3 for a modern layout with MultiMarkup for creating documents.
 \item Did some optimization on the original OpenGL and other graphics code in the project
 \end{compactitem}
 
+\affiliation[Creator, Lead Programmer]{MediaSched}{2005-}
+
+\begin{compactitem}
+\item MediaSched is a program for easily running any kind of scheduled and unscheduled media playback.  Supporting the use of existing calendar/scheduling software for the selection of simple to complex play lists.
+\item More Information: \url{http://github.com/simcop2387/MediaSched}
+\end{compactitem}
+
 \subsection{Work History}
 
 \affiliation[Web Designer, Javascript Programmer]{Personal Project}{2010}
 \begin{compactitem}
 \item Created several designs for \url{http://www.notanewyorker.com/} and related sites.
+\end{compactitem}
+
+\affiliation[Cashier, Stock]{Autozone}{2007-2008}
+\begin{compactitem}
+\item 
 \end{compactitem}
 
 \section{Education}
