--- a/masterresume.tex
+++ b/masterresume.tex
@@ -132,7 +132,16 @@ with CSS3 for a modern layout with MultiMarkup for creating documents.
 
 \affiliation[Cashier, Stock]{Autozone}{2007-2008}
 \begin{compactitem}
-\item 
+  \item Operated the cash register at the front of the store
+  \item Kept the stock room organized
+  \item Installed various parts in customers cars
+\end{compactitem}
+
+\affiliation[Cashier, Stock]{CVS}{2002-2003}
+\begin{compactitem}  
+  \item Operated the cash register at the front of the store
+  \item Assisted customers in a polite manner
+  \item Kept the stock room organized
 \end{compactitem}
 
 \section{Education}
