--- a/masterresume.tex
+++ b/masterresume.tex
@@ -11,8 +11,9 @@
 \phone{678-551-2387}
 \email{ryan@voots.org}
 \webpage{http://www.simcop2387.info}
-\streetaddress{101 Columbus Ct}
-\citystatezip{Dallas GA, 30132}
+% \streetaddress{101 Columbus Ct}
+% \citystatezip{Dallas GA, 30132}
+\citystatezip{  }
 
 \usepackage{geometry}
 
@@ -77,6 +78,32 @@ HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication ski
 
 \section{Experience}
 
+\subsection{Work History}
+
+\affiliation[Web Designer, Javascript Programmer, Backend Programmer]{Things Done Later}{2011}
+\begin{compactitem}
+\item Created interactive interface and backend for Things Done Later.  \url{http://www.thingsdonelater.com} code available at \url{https://github.com/simcop2387/TDL}.
+\end{compactitem}
+
+\affiliation[Web Designer, Javascript Programmer]{Not A New Yorker}{2010}
+\begin{compactitem}
+\item Created several designs for \url{http://www.notanewyorker.com/} and related sites.
+\end{compactitem}
+
+\affiliation[Cashier, Stock]{Autozone}{2007-2008}
+\begin{compactitem}
+  \item Operated the cash register at the front of the store
+  \item Kept the stock room organized
+  \item Installed various parts in customers cars
+\end{compactitem}
+
+\affiliation[Cashier, Stock]{CVS}{2002-2003}
+\begin{compactitem}  
+  \item Operated the cash register at the front of the store
+  \item Assisted customers in a polite manner
+  \item Kept the stock room organized
+\end{compactitem}
+
 \subsection{Open Source Work}
 
 \affiliation[~]{Github}{~}
@@ -121,27 +148,6 @@ with CSS3 for a modern layout with MultiMarkup for creating documents.
 \begin{compactitem}
 \item MediaSched is a program for easily running any kind of scheduled and unscheduled media playback.  Supporting the use of existing calendar/scheduling software for the selection of simple to complex play lists.
 \item More Information: \url{http://github.com/simcop2387/MediaSched}
-\end{compactitem}
-
-\subsection{Work History}
-
-\affiliation[Web Designer, Javascript Programmer]{Personal Project}{2010}
-\begin{compactitem}
-\item Created several designs for \url{http://www.notanewyorker.com/} and related sites.
-\end{compactitem}
-
-\affiliation[Cashier, Stock]{Autozone}{2007-2008}
-\begin{compactitem}
-  \item Operated the cash register at the front of the store
-  \item Kept the stock room organized
-  \item Installed various parts in customers cars
-\end{compactitem}
-
-\affiliation[Cashier, Stock]{CVS}{2002-2003}
-\begin{compactitem}  
-  \item Operated the cash register at the front of the store
-  \item Assisted customers in a polite manner
-  \item Kept the stock room organized
 \end{compactitem}
 
 \section{Education}
