--- a/masterresume.tex
+++ b/masterresume.tex
@@ -104,6 +104,8 @@ HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication ski
   \item Kept the stock room organized
 \end{compactitem}
 
+\vspace{0.2in}
+
 \subsection{Open Source Work}
 
 \affiliation[~]{Github}{~}
