--- a/cover-jobvite.tex
+++ b/cover-jobvite.tex
@@ -32,44 +32,15 @@ MTL Consulting, Inc.}
 
 \opening{Dear Mrs. Lindenmayer:}
 
-I'm writing you after hearing about you from my father, whom you spoke to on your recent flight to Boston.
-I'd like to introduce myself to you and give you an idea of what I can do.
+I am writing to you per your conversation with my father, Terry Voots, with whom you spoke on your recent flight to Boston.  I would like to introduce myself to you and provide some brief highlights of the type of work I can perform.
 
-\comment{\noindent PARAGRAPH ONE: State reason for letter, name the position or type
-of work you are applying for and identify source from  which  you 
-learned   of   the  opening.  (i.e.  Career  Development  Center, 
-newspaper, employment service, personal contact).}
+I am well experienced with both hardware and software.  I have successfully designed and written numerous software projects that are open source.  In addition to being able to take a software project from start to finish, I have experience with writing technical documentation for them, including writing tests to show that the software performs to the specifications and documentation.
 
-I am experienced with both hardware and software.
-I've designed and written a number of software projects that are open source.
-Along with being able to take a software project from start to finish; I have experience writing technical documentation for them, writing tests to show that the software performs to the specifications and documentation.
+On the hardware side, I have rack mounted existing servers to create a more organized workspace.  I have also installed security cameras, and set up a dedicated monitoring system to record any movement.
 
-On the hardware side I have rack mounted existing servers to create a more organized workspace.  Installed security cameras and set up a dedicated monitoring system to record any movement.
+I welcome the opportunity to speak with you further about my experience and background.  I have included my resume and would appreciate any direction you might have in helping me find someone who could use my help.  I can be contacted by email at ryan@voots.org, or by phone at 678-551-2387.  Thank you in advance for your time.  
 
-\comment{\noindent PARAGRAPH  TWO:  Indicate why you are interested in the position,
-the company, its products, services - above all, stress what you 
-can  do  for  the employer. If you are a recent graduate, explain  how
-your academic background makes you a qualified candidate for the
-position. If  you have practical work experience, point out 
-specific achievements or unique qualifications. Try not to repeat 
-the  same  information  the reader will find in the resume. Refer 
-the reader to the enclosed resume or application which summarizes 
-your  qualifications,  training,  and experiences. The purpose of 
-this section is to strengthen your resume  by  providing  details 
-which bring your experiences to life. }
-
-I can be contacted by email at \href{mailto:ryan@voots.org}{ryan@voots.org}, or by phone at 678-551-2387.
-Thank you for taking the time to look at my resume to see if you know anyone who could use my help.
-\comment{\noindent PARAGRAPH THREE: Request a personal interview and  indicate  your
-flexibility as to the time and place. Repeat your phone number in 
-the letter and offer assistance to help in a speedy response. For 
-example,  state that you will be in the city where the company is 
-located on a certain date and would like to set up an  interview. 
-Or,  state  that  you  will  call  on a certain date to set up an 
-interview. End the letter by thanking  the  employer  for  taking 
-time to consider your credentials. }
- 
-\closing{Sincerely yours,}
+\closing{Sincerely,}
 
 \end{letter}
  
