--- a/cover-jobvite.tex
+++ b/cover-jobvite.tex
@@ -28,7 +28,8 @@ MTL Consulting, Inc.}
 \large\bf Ryan J. Voots \\
 101 Columbus Court \\ Dallas, GA 30132 \\ (678) 551-2387
 \end{center} 
-\vfill % forces letterhead to top of page
+% \vfill % forces letterhead to top of page
+\vspace{1in}
 
 \opening{Dear Mrs. Lindenmayer:}
 
