--- a/masterresume.tex
+++ b/masterresume.tex
@@ -83,11 +83,21 @@ HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication ski
 \affiliation[Web Designer, Javascript Programmer, Backend Programmer]{Things Done Later}{2011}
 \begin{compactitem}
 \item Created interactive interface and backend for Things Done Later.  \url{http://www.thingsdonelater.com} code available at \url{https://github.com/simcop2387/TDL}.
+\item Backend consists of a lightweight FastCGI Perl backend capable of handling large loads without requiring large investments in server capacity.
+\item Frontend is created using JQuery and features a fully secure login using HMAC-SHA256 challenge-response to allow authentication without transmitting sensitive data.
 \end{compactitem}
 
 \affiliation[Web Designer, Javascript Programmer]{Not A New Yorker}{2010}
 \begin{compactitem}
-\item Created several designs for \url{http://www.notanewyorker.com/} and related sites.
+\item Created several designs and implemented them for \url{http://www.notanewyorker.com/} and related sites.
+\end{compactitem}
+
+\affiliation[Programmer]{Cyphrus Federation of Underwater Activities}{2010}
+
+\begin{compactitem}
+\item Created interactive dive tables to plan no decompression dives without the aide of an expensive dive computer.
+\item The Perl backend was created to be edited and worked with using the existing workflow of the client.
+\item More Information: \url{http://www.oceanssearch.com/}
 \end{compactitem}
 
 \affiliation[Cashier, Stock]{Autozone}{2007-2008}
