--- a/resume.tex
+++ b/resume.tex
@@ -14,14 +14,24 @@
 \streetaddress{101 Columbus Ct}
 \citystatezip{Dallas GA, 30132}
 
+\qrtitle{
+BEGIN:VCARD
+N:Voots;Ryan
+ADR:;;101 Columbus Ct.;Dallas;GA;30132;
+EMAIL:ryan@voots.org
+TEL:678-551-2387
+URL:http://simcop2387.info/
+END:VCARD
+}
+
 \usepackage{geometry}
 
-	\addtolength{\oddsidemargin}{-.5in}
-	\addtolength{\evensidemargin}{-.5in}
-	\addtolength{\topmargin}{-.5in}
+\addtolength{\oddsidemargin}{-.5in}
+\addtolength{\evensidemargin}{-.5in}
+\addtolength{\topmargin}{-.5in}
 
-	\addtolength{\textwidth}{1.0in}
-	\addtolength{\textheight}{1.375in}
+\addtolength{\textwidth}{1.0in}
+\addtolength{\textheight}{1.375in}
 
 % is this the real life?  is this just fantasy?
 \usepackage[unicode=true, 
