--- a/resume.tex
+++ b/resume.tex
@@ -15,13 +15,13 @@
 \citystatezip{Dallas GA, 30132}
 
 \qrtitle{
-BEGIN:VCARD
-N:Voots;Ryan
-ADR:;;101 Columbus Ct.;Dallas;GA;30132;
-EMAIL:ryan@voots.org
-TEL:678-551-2387
-URL:http://simcop2387.info/
-END:VCARD
+BEGIN:VCARD\
+N:Voots;Ryan\
+ADR:;;101 Columbus Ct.;Dallas;GA;30132;\
+EMAIL:ryan@voots.org\
+TEL:678-551-2387\
+URL:http://simcop2387.info/\
+END:VCARD\
 }
 
 \usepackage{geometry}
