updating language slightly

--- a/resume.tex
+++ b/resume.tex
@@ -99,7 +99,7 @@ HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication ski
 \begin{compactitem}
 \item Farnsworth is a dynamically typed functional and imperative programming language.  
 It is being designed for applied mathematics and physics.  Currently has a working implementation 
-consisting of 26,000 lines of code, including a testing suite for the parts of the language that are finalized.
+consisting of 26,000 lines of code, including a testing suite and specification for the parts of the language that are finalized.
 \item More Information: \url{http://www.simcop2387.info/}
 \end{compactitem}
 
