--- a/masterresume.tex
+++ b/masterresume.tex
@@ -80,6 +80,11 @@ HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication ski
 
 \subsection{Work History}
 
+\affiliation[Programmer]{Contract Work}{2011}
+\begin{compactitem}
+\item Created Application to retrieve data from Google Analytics and perform customized reports on data importable into spreadsheets and other report creation software.
+\end{compactitem}
+
 \affiliation[Web Designer, Javascript Programmer, Backend Programmer]{Things Done Later}{2011}
 \begin{compactitem}
 \item Created interactive interface and backend for Things Done Later.  \url{http://www.thingsdonelater.com} code available at \url{https://github.com/simcop2387/TDL}.
