--- a/resume-edgecast.tex
+++ b/resume-edgecast.tex
@@ -11,8 +11,8 @@
 \phone{678-551-2387}
 \email{ryan@voots.org}
 \webpage{http://www.simcop2387.info}
-% \streetaddress{101 Columbus Ct}
-% \citystatezip{Dallas GA, 30132}
+\streetaddress{101 Columbus Ct}
+\citystatezip{Dallas GA, 30132}
 \citystatezip{  }
 
 \usepackage{geometry}
@@ -29,10 +29,10 @@
  bookmarks=true,bookmarksnumbered=false,bookmarksopen=false,
  breaklinks=true,pdfborder={0 0 1},backref=false,colorlinks=true]
  {hyperref}
-\hypersetup{pdftitle={Ryan Voot's Resume},
+\hypersetup{pdftitle={Ryan Voots' Resume},
  pdfauthor={Ryan Voots},
  pdfsubject={If you're reading this, I made this in LaTeX and I'm glad you're really scouring my resume.},
- pdfkeywords={media, temple, resume, mediatemple, are, you, really, a, search, engine}}
+ pdfkeywords={resume, are, you, really, a, search, engine}}
 
 
 % For more compact lists.
@@ -73,7 +73,7 @@ Linux, Windows NT/2000/XP, some Solaris and BSD
 \item[Applications and Libraries:]
 PostgreSQL, MySQL, Apache, Lighttpd, Git, CVS, Subversion
 \item[Miscellaneous:]
-HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication skills; excellent troubleshooting, problem solving, and debugging skills; very quick learner.
+HTML; CSS; IPv4 and IPv6 networking; excellent troubleshooting, problem solving, and debugging skills; very quick learner.
 \end{description}
 
 \section{Experience}
@@ -82,14 +82,16 @@ HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication ski
 
 \affiliation[Level 2 Technical Support]{Versata}{2011-2012}
 \begin{compactitem}
-\item blah blah
-\item hoo hee
+\item Creating custom solutions tailored to customer environments.
+\item Assisting in Quality Assurance for new releases before going out to customers
+\item Fixing bugs in supported products
+\item Assisting the training of new personnel
 \end{compactitem}
 
 \affiliation[System Administrator]{Jeff Stewart}{2011}
 \begin{compactitem}
 \item Determine the cause of service interruptions from software crashes
-\item Diagnose network interruptions and worked with service provider to fix and provide a timeline to customers
+\item Diagnose network interruptions and worked with service provider to fix and provide a time-line to customers
 \item Provide direct technical support to customers to fix or work around any issues that come up
 \end{compactitem}
 
@@ -103,11 +105,6 @@ HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication ski
 \item Created interactive interface and backend for Things Done Later.  \url{http://www.thingsdonelater.com} code available at \url{https://github.com/simcop2387/TDL}.
 \item Backend consists of a lightweight FastCGI Perl backend capable of handling large loads without requiring large investments in server capacity.
 \item Frontend is created using JQuery and features a fully secure login using HMAC-SHA256 challenge-response to allow authentication without transmitting sensitive data.
-\end{compactitem}
-
-\affiliation[Web Designer, Javascript Programmer]{Not A New Yorker}{2010}
-\begin{compactitem}
-\item Created several designs and implemented them for \url{http://www.notanewyorker.com/} and related sites.
 \end{compactitem}
 
 \affiliation[Programmer]{Cyphrus Federation of Underwater Activities}{2010}
